--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">8.0</string>
+    <string name="app_8.0">Ваше имя приложения</string>
+    <string name="image_description">Описание вашего изображения</string>
+    <string name="load_model">Load Model</string>
+    <string name="unload_model">Unload Model</string>
 </resources>
